feat(jwt): Implemented basic and stateless token generation for api endpoints
